--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "ngx-validation": "0.0.4",
+    "ngx-validators": "^3.0.0",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.12"
   },
