--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular2-busy": "^2.0.4",
+    "angular2-ladda": "^1.2.1",
     "core-js": "^2.4.1",
     "ngx-validation": "0.0.4",
     "ngx-validators": "^3.0.0",
