--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular-h-sweetalert": "^2.0.1",
     "angular2-busy": "^2.0.4",
     "angular2-ladda": "^1.2.1",
     "core-js": "^2.4.1",
+    "ng2-sweetalert2": "0.0.8",
     "ngx-validation": "0.0.4",
     "ngx-validators": "^3.0.0",
     "rxjs": "^5.4.1",
+    "sweetalert": "^1.1.3",
+    "sweetalert2": "^6.6.6",
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
