--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular2-busy": "^2.0.4",
     "angular2-ladda": "^1.2.1",
     "core-js": "^2.4.1",
+    "email-verification": "^0.4.6",
     "ng2-sweetalert2": "0.0.8",
     "ngx-validation": "0.0.4",
     "ngx-validators": "^3.0.0",
