--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
     "angular-h-sweetalert": "^2.0.1",
     "angular2-busy": "^2.0.4",
     "angular2-ladda": "^1.2.1",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "email-verification": "^0.4.6",
+    "ng2-charts": "^1.6.0",
     "ng2-sweetalert2": "0.0.8",
     "ngx-validation": "0.0.4",
     "ngx-validators": "^3.0.0",
     "rxjs": "^5.4.1",
     "sweetalert": "^1.1.3",
     "sweetalert2": "^6.6.6",
-    "zone.js": "^0.8.12"
+    "zone.js": "^0.8.16"
   },
   "devDependencies": {
     "@angular/cli": "1.3.0-beta.0",
